--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,8 @@
 {
-  "name": "Counter",
-  "description": "An application for Aragon",
+  "name": "Minime Token",
+  "description": "A copyable, upgradable erc20 token",
   "icons": [{
     "src": "/dist/images/icon.png",
     "sizes": "22x22"
-  }],
-  "start_url": "/dist/index.html",
-  "script": "/dist/script.js"
+  }]
 }
